# tg-stats

./: .gitignore  Dockerfile  Makefile  README.md  env.example  pyproject.toml  requirements.txt  ruff.toml
config/: logging.py  settings.py  urls.py  views.py
config/group_channels/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
config/group_channels/migrations/: 0001_initial.py  0002_group_owner.py  0003_alter_group_image_url.py  0004_alter_group_options.py
config/parser/: apps.py  forms.py  models.py  parser.py  urls.py  views.py
config/parser/migrations/: 0001_initial.py
config/templates/: base.html  index.html  login.html  message.html
config/templates/parser/: channel_detail.html  channels_list.html  parse_channel.html
config/templates/users/: profile.html  register.html  update.html
config/users/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
config/users/migrations/: 0001_initial.py  0002_user_telegram.py  0003_alter_user_avatar_image.py  0004_user_bio.py  0005_alter_user_avatar_image.py  0006_remove_user_telegram.py  0007_alter_user_email.py
frontend/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx
frontend/src/components/Layout/: Header.tsx  Layout.tsx
frontend/src/constants/: .gitkeep
frontend/src/contexts/: .gitkeep
frontend/src/routes/: index.ts  routes.tsx
frontend/src/services/: .gitkeep
frontend/src/store/: index.ts
frontend/src/types/: .gitkeep
frontend/src/utils/: .gitkeep
(+6 files in other folders)
